@@ -15,7 +15,6 @@ import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -42,7 +41,7 @@ public class LogAndCatchExceptionRunnableTest {
             doAnswer(invocation -> set.add(invocation.getMethod().getName())).when(logRunnable).setLogContext();
             doAnswer(invocation -> set.add(invocation.getMethod().getName())).when(logRunnable).clearLogContext();
 
-            List<CompletableFuture<Void>> futures = IntStream.rangeClosed(0, 4).mapToObj(index -> CompletableFuture.runAsync(logRunnable, executorService)).collect(Collectors.toList());
+            List<CompletableFuture<Void>> futures = IntStream.rangeClosed(0, 4).mapToObj(index -> CompletableFuture.runAsync(logRunnable, executorService)).toList();
             futures.forEach(CompletableFuture::join);
             assertEquals("[setLogContext, clearLogContext]", set.toString());
             LOGGER.info("test finish");
@@ -54,7 +53,7 @@ public class LogAndCatchExceptionRunnableTest {
     @Test
     public void testRunnableWithoutCatchException() {
         AtomicInteger counter = new AtomicInteger(0);
-        List<CompletableFuture<Void>> futures = IntStream.rangeClosed(0, 4).mapToObj(index -> CompletableFuture.runAsync(new LogAndCatchExceptionRunnable(RunnabeTestHelper.getRunnable(counter)), executorService)).collect(Collectors.toList());
+        List<CompletableFuture<Void>> futures = IntStream.rangeClosed(0, 4).mapToObj(index -> CompletableFuture.runAsync(new LogAndCatchExceptionRunnable(RunnabeTestHelper.getRunnable(counter)), executorService)).toList();
         futures.forEach(CompletableFuture::join);
         assertEquals(5, counter.get());
     }
@@ -62,7 +61,7 @@ public class LogAndCatchExceptionRunnableTest {
     @Test
     public void testRunnableWithCatchException() {
         AtomicInteger counter = new AtomicInteger(0);
-        List<CompletableFuture<Void>> futures = IntStream.rangeClosed(0, 4).mapToObj(index -> CompletableFuture.runAsync(new LogAndCatchExceptionRunnable(RunnabeTestHelper.getRunnableWithCatchException(counter)), executorService)).collect(Collectors.toList());
+        List<CompletableFuture<Void>> futures = IntStream.rangeClosed(0, 4).mapToObj(index -> CompletableFuture.runAsync(new LogAndCatchExceptionRunnable(RunnabeTestHelper.getRunnableWithCatchException(counter)), executorService)).toList();
         futures.forEach(CompletableFuture::join);
         assertEquals(5, counter.get());
     }
